# Data-Mesh

./: .env.example  .eslintrc.json  .gitignore  PROJECT_CONTEXT.md  README.md  docker-compose.yml  jest.preset.js  nx.json  package-lock.json  package.json  seed.ts  tsconfig.base.json
.github/workflows/: ci.yml
apps/api/: jest.config.ts  project.json  tsconfig.spec.json  webpack.config.js
apps/api/src/: main.ts
apps/api/src/app/: app.module.ts
apps/api/test/e2e/: app.e2e-spec.ts
apps/ingestion/: pyproject.toml
apps/ingestion/src/: __init__.py
apps/ingestion/src/config/: settings.py
apps/ingestion/src/models/: measurement.py
apps/ingestion/src/ports/: base.py
apps/ingestion/tests/: conftest.py
apps/ingestion/tests/fixtures/: api_responses.py
apps/web/: .eslintrc.json  next.config.js  project.json  tailwind.config.js  tsconfig.json
apps/web/src/app/: global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/src/lib/: config.ts  constants.ts  env.ts  utils.ts
apps/web/src/pages/: 404.tsx  _app.tsx  _error.tsx
apps/web/src/providers/: theme-provider.tsx  toaster.tsx
apps/web/src/services/: api-keys.service.ts  auth.service.ts  datasets.service.ts  http-client.ts  (+5 more)
docker/: api.Dockerfile  ingestion.Dockerfile  web.Dockerfile
docs/: ONBOARDING_WALKTHROUGH.md  PRISMA_WALKTHROUGH.md  PROJECT_OVERVIEW.md
docs/architecture/: HEXAGONAL_ARCHITECTURE_CODE_GUIDE.md  TDD_MUSCLE_MEMORY_GUIDE.md
libs/api-contracts/src/: index.ts
prisma/: schema.prisma
prisma/migrations/20260612115807_init_environmental_datamesh/: migration.sql
(+112 files in other folders)
