[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-mesh-ingestion"
version = "0.1.0"
description = "EU Environmental Data ETL Ingestion Service"
requires-python = ">=3.12"

dependencies = [
  "polars>=1.3.0",
  "httpx>=0.27.0",
  "psycopg[binary]>=3.1.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "structlog>=24.1.0",
  "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "respx>=0.21.0",
  "ruff>=0.3.0",
  "mypy>=1.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP", "ANN", "S", "B", "RUF"]
ignore = ["ANN101", "ANN102"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = false
